<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    DEBUG-->
    <array name="debug_string_array">
        <item>string1</item>
        <item>string2</item>
    </array>

    <string name="app_name">Digital Retail Group</string>
    <string name="title_barcode">Кошелек</string>
    <string name="title_main">Главный экран</string>
    <!--    &lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->

    <!--    Common-->
    <string name="contact_us">Свяжитесь с нами</string>
    <string name="login_problems">Проблемы со входом?</string>
    <string name="send_sms_again">Отправить смс повторно</string>

    <string name="radio_btn_male">Муж</string>
    <string name="radio_btn_female">Жен</string>

    <!--    Login phone-->
    <string name="login_login_text">Вход</string>
    <string name="login_phone_description">Введите номер телефона. На него будет отправлен код подтверждения.</string>
    <string name="login_agreement_descr">Авторизируясь, вы соглашаетесь с нашей</string>
    <string name="login_agreement_text_btn">Политикой конфиденциальности</string>

    <!--    Login code-->
    <string name="login_code_description">Введите пароль из смс, отправленного на номер %s</string>

    <!--    Description titles-->
    <string name="description_title_save">Как копить баллы</string>
    <string name="description_title_get">Как тратить баллы</string>
    <string name="description_title_promotion_rules">Правила акции</string>

    <!--    Main-->
    <string name="main_description">Бренды-партнёры, в чьих магазинах вы можете использвать баллы при оплате.</string>
    <string name="main_how_to_save_points">Как копить баллы</string>
    <string name="main_how_to_spend_points">Как тратить баллы</string>
    <string name="main_ask_question">Задать вопрос</string>
    <string name="main_privacy_policy">Политика конфиденциальности</string>

    <!--    Barcode-->
    <string name="barcode_balance_title">Ваш баланс</string>
    <string name="barcode_balance_currency">баллов</string>

    <string name="barcode_btn_confirmation_code">Код подтверждения</string>
    <string name="barcode_btn_how_to_get_points">Как получить баллы</string>

    <string name="barcode_btn_new_code">Новый код</string>
    <string name="barcode_code_description">Сообщите код кассиру</string>
    <string name="code_timer_text">Запросить новый код можно будет через</string>

    <string name="barcode_offer_rules">Правила акции</string>

    <!--    Notifications-->
    <string name="notification_title">Уведомления</string>
    <string name="notification_empty_text">Уведомлений пока нет</string>

    <!--    Profile-->
    <string name="profile_title">Профиль</string>
    <string name="profile_title_is_registration">Заполните свой профиль</string>

    <string name="profile_btn_1_save">Сохранить изменения</string>
    <string name="profile_btn_2_logout">Выйти</string>

    <string name="profile_btn_1_save_data">Сохранить данные</string>
    <string name="profile_btn_2_later">Позже</string>

    <string name="profile_surname_title">Фамилия</string>
    <string name="profile_surname_hint">Введите фамилию</string>

    <string name="profile_first_name_title">Имя</string>
    <string name="profile_first_name_hint">Введите имя</string>

    <string name="profile_last_name_title">Отчество</string>
    <string name="profile_last_name_hint">Введите отчество</string>

    <string name="profile_birth_date_title">Дата рождения</string>
    <string name="profile_birth_date_hint">Введите дату</string>

    <!--    Dialogs-->
    <string name="dialog_save_profile_data_title">Сохранить данные?</string>
    <string name="dialog_save_profile_data_message">Вы внесли новые данные в профиль. Хотите сохранить изменения?</string>
    <string name="dialog_save_profile_data_btn_positive">Сохранить</string>
    <string name="dialog_save_profile_data_btn_negative">Не сохранять</string>

    <string name="dialog_error_title">Произошла ошибка</string>

    <string name="dialog_generic_message_title">Сообщение</string>

    <!--    Snackbar-->
    <string name="snackbar_btn_cancel">Отменить</string>
    <string name="snackbar_msg_message_removed">Сообщение удалено</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>