<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".screens.ProfileFragment">

    <include
        android:id="@+id/custom_toolbar"
        layout="@layout/custom_toolbar" />

    <ScrollView
        android:id="@+id/content_layout_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/save_btn"
        android:layout_below="@id/custom_toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <RelativeLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/surname_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_surname_title"

                android:textAppearance="@style/TextAppearance.DigitalRetailGroup.TextInputTitle"
                android:textSize="12dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surname_text_layout"
                style="@style/Widget.DigitalRetailGroup.TextInputLayout.Titled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/surname_title"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/profile_surname_hint"
                    android:inputType="textCapWords"
                    android:selectAllOnFocus="true"

                    style="@style/Widget.DigitalRetailGroup.EditText"
                    android:textSize="16dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/first_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/surname_text_layout"
                android:layout_marginTop="9dp"
                android:text="@string/profile_first_name_title"

                android:textAppearance="@style/TextAppearance.DigitalRetailGroup.TextInputTitle"
                android:textSize="12dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_text_layout"
                style="@style/Widget.DigitalRetailGroup.TextInputLayout.Titled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_name_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/profile_first_name_hint"
                    android:inputType="textPersonName|textCapWords"
                    android:selectAllOnFocus="true"

                    style="@style/Widget.DigitalRetailGroup.EditText"
                    android:textSize="16dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/last_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_name_text_layout"
                android:layout_marginTop="9dp"
                android:text="@string/profile_last_name_title"

                android:textAppearance="@style/TextAppearance.DigitalRetailGroup.TextInputTitle"
                android:textSize="12dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_text_layout"
                style="@style/Widget.DigitalRetailGroup.TextInputLayout.Titled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_name_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/second_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/profile_last_name_hint"
                    android:inputType="textPersonName|textCapWords"
                    android:selectAllOnFocus="true"

                    style="@style/Widget.DigitalRetailGroup.EditText"
                    android:textSize="16dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_name_text_layout"
                android:layout_marginTop="9dp"
                android:text="@string/profile_birth_date_title"

                android:textAppearance="@style/TextAppearance.DigitalRetailGroup.TextInputTitle"
                android:textSize="12dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birth_date_text_layout"
                style="@style/Widget.DigitalRetailGroup.TextInputLayout.Titled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_title"
                app:endIconDrawable="@drawable/ic_calendar"
                app:endIconMode="custom"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birth_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/profile_birth_date_hint"
                    android:inputType="none"

                    style="@style/Widget.DigitalRetailGroup.EditText"
                    android:textSize="16dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@+id/birth_date_text_layout"
                android:layout_marginTop="26dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_male"
                    style="@style/Widget.DigitalRetailGroup.RadioButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/radio_btn_male" />
                <!--                android:button="@drawable/selector_radio_btn_icon_female"-->

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_female"
                    style="@style/Widget.DigitalRetailGroup.RadioButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/radio_btn_female"

                    />
                <!--                    android:background="@drawable/selector_radio_button_female"-->
                <!--                android:button="@drawable/selector_radio_btn_icon_male"-->

            </RadioGroup>

        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_above="@+id/logout_btn"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/profile_btn_save"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_btn"
        style="@style/Widget.DigitalRetailGroup.Button.Green"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="10dp"
        android:text="@string/profile_btn_logout"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_secondary_pressed"
        android:layerType="software"
        />

</RelativeLayout>