<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".screens.BarcodeFragment">

    <include
        android:id="@+id/custom_toolbar"
        layout="@layout/custom_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/custom_toolbar"
        android:id="@+id/content_layout_scroll_view"
        android:layout_marginBottom="140dp"
        >

        <RelativeLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingBottom="200dp"
            >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/balance_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/barcode_balance_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/balance_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/balance_title"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="250"
                android:textSize="40dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/balance_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/balance_amount"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/barcode_balance_currency" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/barcode_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/balance_currency"
                android:layout_marginTop="12dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    style="@style/Widget.DigitalRetailGroup.PseudoCard"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/logo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.8"
                        app:srcCompat="@drawable/dummy_barcode" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/get_code_btn"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_below="@+id/barcode_container"
                android:layout_marginTop="12dp"
                android:text="@string/barcode_btn_confirmation_code"
                app:layout_constraintBottom_toBottomOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/how_to_get_points_btn"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_below="@+id/get_code_btn"
                android:layout_marginTop="12dp"
                android:text="@string/barcode_btn_how_to_get_points"
                app:layout_constraintBottom_toBottomOf="parent" />

            <RelativeLayout
                android:id="@+id/code_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/how_to_get_points_btn"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="4657"
                    android:textSize="40dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/code_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/code"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/barcode_code_description" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/new_code_btn"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:layout_below="@+id/code_description"
                    android:layout_marginTop="12dp"
                    android:text="@string/barcode_btn_new_code"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <LinearLayout
                    android:id="@+id/new_code_timer_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/new_code_btn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="47dp"
                    >

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/code_timer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/code_timer_text"
                        android:textSize="12dp"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/code_timer_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginLeft="6dp"
                        android:textSize="14dp"
                        android:text="01:00" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>